--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -21,13 +21,26 @@
   "accountInformation": "Account Information",
   "publicProfile": "Public Profile",
   "notifications": "Notifications",
-  "privacy_policy":"Privacy Policy",
-  "notifications_reset":"Notifications Reset",
+  "privacy_policy": "Privacy Policy",
+  "notifications_reset": "Notifications Reset",
   "privacyAndDate": "Privacy and Date",
   "securityAndLogins": "Security and Logins",
   "actions": "Actions",
   "addAccount": "Add Account",
   "logOut": "Log out",
-  "theme_change":"Theme Change",
-  "language_change":"Language Change"
+  "theme_change": "Theme Change",
+  "language_change": "Language Change",
+  "back": "Back",
+  "account_information": "Account Information",
+  "reset_notifications_label": "Reset Notifications",
+  "terms_and_conditions": "Terms and Conditions",
+  "term_and_condition": "Term and Condition",
+  "logout": "Logout",
+  "logout_confirmation": "Are you sure you want to logout?",
+  "logout_message": "You have successfully logged out.",
+  "light": "Change to Light Mode",
+  "dark": "Change to Dark Mode",
+  "web":"Web",
+  "notification_clean":"Notification Clean",
+  "cancel":"Cancel"
 }
