--- a/src/locales/gu/translation.json
+++ b/src/locales/gu/translation.json
@@ -1,20 +1,46 @@
 {
   "greeting": "નમસ્તે,",
   "get_started": "ચાલો શરૂ કરીએ.",
-  "login_description": "આગળ વધવા માટે તમારો નંબર નો ઉપયોગ કરીને લૉગિન કરો.",
+  "login_description": "ચાલુ રાખવા માટે તમારું નંબર દાખલ કરો.",
   "phone_number_placeholder": "તમારો ફોન નંબર દાખલ કરો",
-  "invalid_phone_number": "કૃપા કરીને માન્ય 10 અંકનો ફોન નંબર દાખલ કરો.",
+  "invalid_phone_number": "કૃપા કરીને માન્ય 10-અંકનો ફોન નંબર દાખલ કરો.",
   "login_button": "લૉગિન",
-  "error": "ખોટી માહિતી",
-  "error_message": "તમારો નંબર સાચવો અસમર્થ. કૃપા કરીને ફરી પ્રયાસ કરો.",
+  "error": "ત્રુટી",
+  "error_message": "તમારો નંબર સંગ્રહ કરવામાં નિષ્ફળ. કૃપા કરીને ફરી પ્રયાસ કરો.",
   "invalid_phone_number_title": "અમાન્ય ફોન નંબર",
-  "verify_otp": "OTP ચકાસો",
-  "enter_otp_code": "તમારા ફોન પર મોકલેલા 4 અંકના કોડને દાખલ કરો.",
-  "resend_otp": "OTP ફરી મોકલાવો",
-  "confirm": "પુષ્ટિ કરો",
+  "verify_otp": "ઓટીપીની ચકાસણી કરો",
+  "enter_otp_code": "તમારા ફોન પર મોકલાયેલા 4-અંકના કોડ દાખલ કરો.",
+  "resend_otp": "ઓટીપી ફરી મોકલો",
+  "confirm": "ખાતરી કરો",
   "your_business_name": "તમારા બિઝનેસનું નામ",
-  "transaction_details": "ટ્રાન્ઝેક્શન વિગતો",
+  "transaction_details": "લેનદેન વિગતો",
   "party_details": "પાર્ટી વિગતો",
-  "manage_transaction_details": "તમારા ટ્રાન્ઝેક્શન વિગતોને સક્ષમ રીતે મેનેજ કરો.",
-  "manage_party_details": "અહિં તમારી પાર્ટી વિગતો જોવાઈ અને મેનેજ કરી શકો છો."
+  "manage_transaction_details": "તમારા લેનદેન વિગતોને અસરકારક રીતે મેનેજ કરો.",
+  "manage_party_details": "અહીં તમે તમારું પાર્ટી વિગત જોવી અને મેનેજ કરી શકો છો.",
+  "settings": "સેટિંગ્સ",
+  "accountInformation": "ખાતાની માહિતી",
+  "publicProfile": "જાહેર પ્રોફાઇલ",
+  "notifications": "સૂચનાઓ",
+  "privacy_policy": "ગોપનીયતા નીતિ",
+  "notifications_reset": "સૂચનાઓ રીસેટ કરો",
+  "privacyAndDate": "ગોપનીયતા અને તારીખ",
+  "securityAndLogins": "સુરક્ષા અને લૉગિન",
+  "actions": "ક્રિયાઓ",
+  "cancel":"રદ કરો",
+  "addAccount": "ખાતું ઉમેરો",
+  "logOut": "લૉગઆઉટ",
+  "theme_change": "થીમ બદલો",
+  "language_change": "ભાષા બદલો",
+  "back": "પાછળ",
+  "account_information": "ખાતાની માહિતી",
+  "reset_notifications_label": "સૂચનાઓ રીસેટ કરો",
+  "terms_and_conditions": "શરતો અને નિયમો",
+  "term_and_condition": "શરત અને શરતો",
+  "logout": "લૉગઆઉટ",
+  "logout_confirmation": "શું તમે ખરેખર લૉગઆઉટ કરવા માંગો છો?",
+  "logout_message": "તમે સફળતાપૂર્વક લૉગઆઉટ કરી લીધું છે.",
+  "light": "લાઇટ મોડ પર બદલો",
+  "dark": "ડાર્ક મોડ પર બદલો",
+  "web": "વેબ",
+  "notification_clean": "સૂચના સાફ કરો"
 }
