--- a/src/locales/gu/translation.json
+++ b/src/locales/gu/translation.json
@@ -1,46 +1,59 @@
 {
   "greeting": "નમસ્તે,",
-  "get_started": "ચાલો શરૂ કરીએ.",
-  "login_description": "ચાલુ રાખવા માટે તમારું નંબર દાખલ કરો.",
+  "get_started": "ચાલો પ્રારંભ કરીએ.",
+  "login_description": "જોરો આપવા માટે તમારા નંબરનો ઉપયોગ કરીને લોગિન કરો.",
   "phone_number_placeholder": "તમારો ફોન નંબર દાખલ કરો",
-  "invalid_phone_number": "કૃપા કરીને માન્ય 10-અંકનો ફોન નંબર દાખલ કરો.",
-  "login_button": "લૉગિન",
-  "error": "ત્રુટી",
-  "error_message": "તમારો નંબર સંગ્રહ કરવામાં નિષ્ફળ. કૃપા કરીને ફરી પ્રયાસ કરો.",
+  "invalid_phone_number": "કૃપા કરીને માન્ય 10 અંકનો ફોન નંબર દાખલ કરો.",
+  "login_button": "લોગિન",
+  "error": "કેટલું ખરાબ છે",
+  "error_message": "તમારો નંબર સાચવવામાં નિષ્ફળ. કૃપા કરીને ફરીથી પ્રયાસ કરો.",
   "invalid_phone_number_title": "અમાન્ય ફોન નંબર",
-  "verify_otp": "ઓટીપીની ચકાસણી કરો",
-  "enter_otp_code": "તમારા ફોન પર મોકલાયેલા 4-અંકના કોડ દાખલ કરો.",
-  "resend_otp": "ઓટીપી ફરી મોકલો",
-  "confirm": "ખાતરી કરો",
+  "verify_otp": "ઓટિપિ ચકાસો",
+  "enter_otp_code": "તમારા ફોન પર મોકલેલા 4-અંકના કોડને દાખલ કરો.",
+  "resend_otp": "ઓટિપિ ફરી મોકલો",
+  "confirm": "પૃષ્ઠિ કરો",
   "your_business_name": "તમારા બિઝનેસનું નામ",
-  "transaction_details": "લેનદેન વિગતો",
+  "transaction_details": "લેણ-દેણ વિગતો",
   "party_details": "પાર્ટી વિગતો",
-  "manage_transaction_details": "તમારા લેનદેન વિગતોને અસરકારક રીતે મેનેજ કરો.",
-  "manage_party_details": "અહીં તમે તમારું પાર્ટી વિગત જોવી અને મેનેજ કરી શકો છો.",
+  "manage_transaction_details": "તમારી લેણ-દેણ વિગતો કાર્યક્ષમતા સાથે મેનેજ કરો.",
+  "manage_party_details": "અહીં તમે તમારી પાર્ટી વિગતો જોઈ અને મેનેજ કરી શકો છો.",
   "settings": "સેટિંગ્સ",
-  "accountInformation": "ખાતાની માહિતી",
-  "publicProfile": "જાહેર પ્રોફાઇલ",
-  "notifications": "સૂચનાઓ",
+  "accountInformation": "ખાતાનું માહિતી",
+  "publicProfile": "પબ્લિક પ્રોફાઈલ",
+  "notifications": "સૂચના",
   "privacy_policy": "ગોપનીયતા નીતિ",
-  "notifications_reset": "સૂચનાઓ રીસેટ કરો",
+  "notifications_reset": "સૂચનાઓ રીસેટ",
   "privacyAndDate": "ગોપનીયતા અને તારીખ",
-  "securityAndLogins": "સુરક્ષા અને લૉગિન",
+  "securityAndLogins": "સુરક્ષા અને લોગિન",
   "actions": "ક્રિયાઓ",
-  "cancel":"રદ કરો",
-  "addAccount": "ખાતું ઉમેરો",
-  "logOut": "લૉગઆઉટ",
-  "theme_change": "થીમ બદલો",
-  "language_change": "ભાષા બદલો",
-  "back": "પાછળ",
+  "addAccount": "ખાતા ઉમેરો",
+  "logOut": "લોગઆઉટ",
+  "theme_change": "વિષય પરિવર્તન",
+  "language_change": "ભાષા પરિવર્તન",
+  "back": "પાછો",
   "account_information": "ખાતાની માહિતી",
   "reset_notifications_label": "સૂચનાઓ રીસેટ કરો",
   "terms_and_conditions": "શરતો અને નિયમો",
-  "term_and_condition": "શરત અને શરતો",
-  "logout": "લૉગઆઉટ",
-  "logout_confirmation": "શું તમે ખરેખર લૉગઆઉટ કરવા માંગો છો?",
-  "logout_message": "તમે સફળતાપૂર્વક લૉગઆઉટ કરી લીધું છે.",
-  "light": "લાઇટ મોડ પર બદલો",
-  "dark": "ડાર્ક મોડ પર બદલો",
+  "term_and_condition": "શરત અને નિયમો",
+  "logout": "લોગઆઉટ",
+  "logout_confirmation": "શું તમે ખાતરી કરો છો કે તમે લોગઆઉટ કરવું છે?",
+  "logout_message": "તમે સફળતાપૂર્વક લોગઆઉટ થયા છો.",
+  "light": "પ્રકાશ મોટે બદલો",
+  "dark": "અંધકાર મોટે બદલો",
   "web": "વેબ",
-  "notification_clean": "સૂચના સાફ કરો"
+  "notification_clean": "સૂચના સફાઈ",
+  "cancel": "રદ્દ કરો",
+  "create_account": "ખાતું બનાવો",
+  "signup_description": "તમારા ઈમેઇલ એડ્રેસ સાથે સાઇન અપ કરો.",
+  "email_placeholder": "તમારો ઈમેઇલ એડ્રેસ દાખલ કરો",
+  "password_placeholder": "તમારો પાસવર્ડ દાખલ કરો",
+  "register_button": "સાઇન અપ",
+  "have_account": "पहले से खाता है? लॉगिन करें",
+  "registration_failed": "પુનઃ નોંધણી નિષ્ફળ. કૃપા કરીને ફરીથી પ્રયાસ કરો.",
+  "confirm_password_placeholder": "તમારો પુનઃ પાસવર્ડ દાખલ કરો",
+  "password_required_length": "પાસવર્ડમાં ઓછામાં ઓછા 6 અક્ષરો હોવા જોઈએ",
+  "password_mismatch": "પાસવર્ડ મેલ ખાવા જોઈએ",
+  "login_success": "લોગિન સફળ",
+  "customer": "ગ્રાહક",
+  "supplier": "પુરવઠાકર્તા"
 }
