Change password update

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -48,12 +48,28 @@
   "email_placeholder": "Enter your email address",
   "password_placeholder": "Enter your password",
   "register_button": "Sign Up",
+  "register_success": "Register Success",
   "have_account": "Already have an account? Log in",
   "registration_failed": "Registration failed. Please try again.",
+  "register_failed": "Registration failed. Please try again.",
   "confirm_password_placeholder": "Enter your confirm password",
-  "password_required_length":"Password should be at least 6 characters",
-  "password_mismatch":"Password should be Match",
-  "login_success":"Login Success",
-  "customer":"Customer",
-  "supplier":"Supplier"
+  "password_required_length": "Password should be at least 6 characters",
+  "password_mismatch": "Password should be Match",
+  "login_success": "Login Success",
+  "customer": "Customer",
+  "supplier": "Supplier",
+  "dark_mode": "Turn on Dark mode",
+  "light_mode": "Turn on Light mode",
+  "reset_password": "Reset Password",
+  "reset_description": "Enter your email to reset your password.",
+  "send_reset_link": "Send Reset Link",
+  "email_required": "Please enter your email.",
+  "reset_email_sent": "Password reset email sent successfully!",
+  "reset_failed": "Failed to send password reset email.",
+  "go_back": "Go Back",
+  "forget_password": "Forget Password ?",
+  "change_password": "Change Password",
+  "current_password_placeholder": "Enter your current password",
+  "new_password_placeholder": "Enter your new password",
+  "password_updated": "Password updated successfully!"
 }
