--- a/src/locales/gu/translation.json
+++ b/src/locales/gu/translation.json
@@ -1,59 +1,75 @@
 {
   "greeting": "નમસ્તે,",
-  "get_started": "ચાલો પ્રારંભ કરીએ.",
-  "login_description": "જોરો આપવા માટે તમારા નંબરનો ઉપયોગ કરીને લોગિન કરો.",
+  "get_started": "ચાલો શરૂ કરીએ.",
+  "login_description": "આગળ વધવા માટે તમારો નંબર દાખલ કરો.",
   "phone_number_placeholder": "તમારો ફોન નંબર દાખલ કરો",
-  "invalid_phone_number": "કૃપા કરીને માન્ય 10 અંકનો ફોન નંબર દાખલ કરો.",
+  "invalid_phone_number": "મહેરબાની કરીને માન્ય 10 અંકનો ફોન નંબર દાખલ કરો.",
   "login_button": "લોગિન",
-  "error": "કેટલું ખરાબ છે",
-  "error_message": "તમારો નંબર સાચવવામાં નિષ્ફળ. કૃપા કરીને ફરીથી પ્રયાસ કરો.",
+  "error": "ભૂલ",
+  "error_message": "તમારો નંબર સાચવવામાં નિષ્ફળ રહ્યો. કૃપા કરીને ફરી પ્રયત્ન કરો.",
   "invalid_phone_number_title": "અમાન્ય ફોન નંબર",
   "verify_otp": "ઓટિપિ ચકાસો",
-  "enter_otp_code": "તમારા ફોન પર મોકલેલા 4-અંકના કોડને દાખલ કરો.",
-  "resend_otp": "ઓટિપિ ફરી મોકલો",
-  "confirm": "પૃષ્ઠિ કરો",
+  "enter_otp_code": "તમારા ફોન પર મોકલાયેલ 4-અંકનો કોડ દાખલ કરો.",
+  "resend_otp": "ઓટિપિ ફરીથી મોકલો",
+  "confirm": "પુષ્ટિ કરો",
   "your_business_name": "તમારા બિઝનેસનું નામ",
-  "transaction_details": "લેણ-દેણ વિગતો",
+  "transaction_details": "ટ્રાન્ઝેક્શન વિગતો",
   "party_details": "પાર્ટી વિગતો",
-  "manage_transaction_details": "તમારી લેણ-દેણ વિગતો કાર્યક્ષમતા સાથે મેનેજ કરો.",
-  "manage_party_details": "અહીં તમે તમારી પાર્ટી વિગતો જોઈ અને મેનેજ કરી શકો છો.",
+  "manage_transaction_details": "તમારા ટ્રાન્ઝેક્શન વિગતોને અસરકારક રીતે સંચાલિત કરો.",
+  "manage_party_details": "અહીં તમે તમારી પાર્ટીની વિગતો જોઈ અને સંચાલિત કરી શકો છો.",
   "settings": "સેટિંગ્સ",
-  "accountInformation": "ખાતાનું માહિતી",
-  "publicProfile": "પબ્લિક પ્રોફાઈલ",
-  "notifications": "સૂચના",
+  "accountInformation": "એકાઉન્ટ માહિતી",
+  "publicProfile": "જાહેર પ્રોફાઇલ",
+  "notifications": "સૂચનાઓ",
   "privacy_policy": "ગોપનીયતા નીતિ",
-  "notifications_reset": "સૂચનાઓ રીસેટ",
+  "notifications_reset": "સૂચનાઓ ફરીથી સેટ કરો",
   "privacyAndDate": "ગોપનીયતા અને તારીખ",
-  "securityAndLogins": "સુરક્ષા અને લોગિન",
+  "securityAndLogins": "સિક્યુરિટી અને લોગિન",
   "actions": "ક્રિયાઓ",
-  "addAccount": "ખાતા ઉમેરો",
+  "addAccount": "એકાઉન્ટ ઉમેરો",
   "logOut": "લોગઆઉટ",
-  "theme_change": "વિષય પરિવર્તન",
-  "language_change": "ભાષા પરિવર્તન",
-  "back": "પાછો",
-  "account_information": "ખાતાની માહિતી",
-  "reset_notifications_label": "સૂચનાઓ રીસેટ કરો",
+  "theme_change": "થીમ બદલો",
+  "language_change": "ભાષા બદલો",
+  "back": "પાછળ",
+  "account_information": "એકાઉન્ટ માહિતી",
+  "reset_notifications_label": "સૂચનાઓ ફરીથી સેટ કરો",
   "terms_and_conditions": "શરતો અને નિયમો",
-  "term_and_condition": "શરત અને નિયમો",
+  "term_and_condition": "શરત અને નિયમ",
   "logout": "લોગઆઉટ",
-  "logout_confirmation": "શું તમે ખાતરી કરો છો કે તમે લોગઆઉટ કરવું છે?",
-  "logout_message": "તમે સફળતાપૂર્વક લોગઆઉટ થયા છો.",
-  "light": "પ્રકાશ મોટે બદલો",
-  "dark": "અંધકાર મોટે બદલો",
+  "logout_confirmation": "શું તમે ખાતરીપૂર્વક લોગઆઉટ કરવા માંગો છો?",
+  "logout_message": "તમે સફળતાપૂર્વક લોગઆઉટ કર્યા.",
+  "light": "લાઇટ મોડમાં બદલો",
+  "dark": "ડાર્ક મોડમાં બદલો",
   "web": "વેબ",
-  "notification_clean": "સૂચના સફાઈ",
-  "cancel": "રદ્દ કરો",
-  "create_account": "ખાતું બનાવો",
-  "signup_description": "તમારા ઈમેઇલ એડ્રેસ સાથે સાઇન અપ કરો.",
-  "email_placeholder": "તમારો ઈમેઇલ એડ્રેસ દાખલ કરો",
+  "notification_clean": "સૂચનાઓ સાફ કરો",
+  "cancel": "રદ કરો",
+  "create_account": "એકાઉન્ટ બનાવો",
+  "signup_description": "તમારા ઇમેલ સરનામા સાથે સાઇન અપ કરો.",
+  "email_placeholder": "તમારું ઇમેલ સરનામું દાખલ કરો",
   "password_placeholder": "તમારો પાસવર્ડ દાખલ કરો",
   "register_button": "સાઇન અપ",
-  "have_account": "पहले से खाता है? लॉगिन करें",
-  "registration_failed": "પુનઃ નોંધણી નિષ્ફળ. કૃપા કરીને ફરીથી પ્રયાસ કરો.",
-  "confirm_password_placeholder": "તમારો પુનઃ પાસવર્ડ દાખલ કરો",
-  "password_required_length": "પાસવર્ડમાં ઓછામાં ઓછા 6 અક્ષરો હોવા જોઈએ",
-  "password_mismatch": "પાસવર્ડ મેલ ખાવા જોઈએ",
-  "login_success": "લોગિન સફળ",
+  "register_success": "સફળતાપૂર્વક નોંધણી",
+  "have_account": "પહેલાથી એકાઉન્ટ છે? લોગિન કરો",
+  "registration_failed": "નોંધણી નિષ્ફળ રહી. કૃપા કરીને ફરી પ્રયાસ કરો.",
+  "register_failed": "નોંધણી નિષ્ફળ રહી. કૃપા કરીને ફરી પ્રયાસ કરો.",
+  "confirm_password_placeholder": "તમારું પુષ્ટિ પાસવર્ડ દાખલ કરો",
+  "password_required_length": "પાસવર્ડ ઓછામાં ઓછા 6 અક્ષરોનો હોવો જોઈએ",
+  "password_mismatch": "પાસવર્ડ સરખા હોવા જોઈએ",
+  "login_success": "સફળતાપૂર્વક લોગિન",
   "customer": "ગ્રાહક",
-  "supplier": "પુરવઠાકર્તા"
+  "supplier": "પુરવઠાકાર",
+  "dark_mode": "ડાર્ક મોડ ચાલુ કરો",
+  "light_mode": "લાઇટ મોડ ચાલુ કરો",
+  "reset_password": "પાસવર્ડ રીસેટ કરો",
+  "reset_description": "તમારા પાસવર્ડ રીસેટ માટે તમારું ઇમેલ દાખલ કરો.",
+  "send_reset_link": "રીસેટ લિંક મોકલો",
+  "email_required": "કૃપા કરીને તમારું ઇમેલ દાખલ કરો.",
+  "reset_email_sent": "પાસવર્ડ રીસેટ ઇમેલ સફળતાપૂર્વક મોકલવામાં આવી!",
+  "reset_failed": "પાસવર્ડ રીસેટ ઇમેલ મોકલવામાં નિષ્ફળ.",
+  "go_back": "પાછા જાઓ",
+  "forget_password": "પાસવર્ડ ભૂલી ગયા છો?",
+  "change_password": "પાસવર્ડ બદલો",
+  "current_password_placeholder": "તમારો હાલનો પાસવર્ડ દાખલ કરો",
+  "new_password_placeholder": "તમારો નવો પાસવર્ડ દાખલ કરો",
+  "password_updated": "પાસવર્ડ સફળતાપૂર્વક અપડેટ થયો!"
 }
