--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -37,7 +37,7 @@
   "term_and_condition": "Term and Condition",
   "logout": "Logout",
   "logout_confirmation": "Are you sure you want to logout?",
-  "logout_message": "You have successfully logged out.",
+  "logout_message": "Press confirm to logout",
   "light": "Change to Light Mode",
   "dark": "Change to Dark Mode",
   "web": "Web",
@@ -77,5 +77,17 @@
   "add_customer": "Add Customer",
   "add_supplier": "Add Supplier",
   "call": "Call",
-  "message": "Message"
+  "message": "Message",
+  "accessibility": "ACCESSIBILITY",
+  "language": "Language",
+  "increase_text_size": "Increase text size",
+  "use_device_language": "Use device language",
+  "auto_dark_mode": "Auto Dark Mode",
+  "follow_os_setting": "Follow OS setting",
+  "about": "About",
+  "terms_conditions": "Terms and Conditions",
+  "mode": "Auto Dark Mode",
+  "off": "Off",
+  "follow_on_setting": "Follow OS setting",
+  "auto_dark_mode_on": "Auto dark mode on"
 }
