--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -81,7 +81,8 @@
   "accessibility": "ACCESSIBILITY",
   "language": "Language",
   "increase_text_size": "Increase text size",
-  "increase_text_size_A":"Increase Text Size",
+  "increase_text_size_A": "Increase Text Size",
+  "currentTextSize": "Text Size",
   "use_device_language": "Use device language",
   "auto_dark_mode": "Auto Dark Mode",
   "follow_os_setting": "Follow OS setting",
@@ -95,5 +96,33 @@
   "overrideSettingsSubtitle": "Adjust the text size in the app without affecting the rest of your device",
   "textLabel": "A",
   "increaseText": "Increase",
-  "decreaseText": "Decrease"
+  "decreaseText": "Decrease",
+  "text_size_not_default": "System default text size is on",
+  "please_fill_all_fields": "Please fill all fields",
+  "customer_updated_successfully": "Customer updated successfully",
+  "customer_added_successfully": "Customer added successfully",
+  "something_went_wrong": "Something went wrong",
+  "edit_customer": "Edit Customer",
+  "enter_customer_name": "Enter customer name",
+  "enter_customer_email": "Enter customer email",
+  "enter_customer_phone": "Enter customer phone number",
+  "enter_customer_address": "Enter customer address",
+  "loading": "Loading...",
+  "update_customer": "Update Customer",
+  "transcation_screen": "Transcation",
+  "transcation_list": "Transcation List",
+  "change_transcation_detail": "Change Transaction Details",
+  "change_customer_detail":"Change Customer Detail",
+  "business": "Business",
+  "edit_profile": "Edit Profile",
+  "enter_amount": "Enter Amount",
+  "edit": "Edit",
+  "save": "Save",
+  "you_gave": "You Gave",
+  "you_got": "You Got",
+  "settement": "Settlement Amount",
+  "report": "Report",
+  "sms": "SMS",
+  "amt":"Amount",
+  "bal":"Bal."
 }
