--- a/src/locales/gu/translation.json
+++ b/src/locales/gu/translation.json
@@ -1,75 +1,133 @@
 {
   "greeting": "નમસ્તે,",
-  "get_started": "ચાલો શરૂ કરીએ.",
-  "login_description": "આગળ વધવા માટે તમારો નંબર દાખલ કરો.",
+  "get_started": "ચાલો શરુ કરીએ.",
+  "login_description": "જારી રાખવા માટે તમારો નંબર ઉપયોગ કરીને લૉગિન કરો.",
   "phone_number_placeholder": "તમારો ફોન નંબર દાખલ કરો",
-  "invalid_phone_number": "મહેરબાની કરીને માન્ય 10 અંકનો ફોન નંબર દાખલ કરો.",
-  "login_button": "લોગિન",
+  "invalid_phone_number": "કૃપા કરીને માન્ય 10 અંકનો ફોન નંબર દાખલ કરો.",
+  "login_button": "લૉગિન",
   "error": "ભૂલ",
-  "error_message": "તમારો નંબર સાચવવામાં નિષ્ફળ રહ્યો. કૃપા કરીને ફરી પ્રયત્ન કરો.",
+  "error_message": "તમારો નંબર સાચવવામાં નિષ્ફળ. ફરી પ્રયત્ન કરો.",
   "invalid_phone_number_title": "અમાન્ય ફોન નંબર",
-  "verify_otp": "ઓટિપિ ચકાસો",
-  "enter_otp_code": "તમારા ફોન પર મોકલાયેલ 4-અંકનો કોડ દાખલ કરો.",
-  "resend_otp": "ઓટિપિ ફરીથી મોકલો",
+  "verify_otp": "OTP ચકાસો",
+  "enter_otp_code": "તમારા ફોન પર મોકલેલ 4-અંકનો કોડ દાખલ કરો.",
+  "resend_otp": "OTP ફરી મોકલો",
   "confirm": "પુષ્ટિ કરો",
-  "your_business_name": "તમારા બિઝનેસનું નામ",
-  "transaction_details": "ટ્રાન્ઝેક્શન વિગતો",
+  "your_business_name": "તમારું વ્યવસાય નામ",
+  "transaction_details": "લેન-દેન વિગતો",
   "party_details": "પાર્ટી વિગતો",
-  "manage_transaction_details": "તમારા ટ્રાન્ઝેક્શન વિગતોને અસરકારક રીતે સંચાલિત કરો.",
-  "manage_party_details": "અહીં તમે તમારી પાર્ટીની વિગતો જોઈ અને સંચાલિત કરી શકો છો.",
+  "manage_transaction_details": "તમારી લેવડ-દેવડની વિગતો અસરકારક રીતે મેનેજ કરો.",
+  "manage_party_details": "અહીં તમે તમારી પાર્ટી વિગતો જોઈ અને મેનેજ કરી શકો.",
   "settings": "સેટિંગ્સ",
-  "accountInformation": "એકાઉન્ટ માહિતી",
+  "accountInformation": "ખાતાની માહિતી",
   "publicProfile": "જાહેર પ્રોફાઇલ",
   "notifications": "સૂચનાઓ",
   "privacy_policy": "ગોપનીયતા નીતિ",
-  "notifications_reset": "સૂચનાઓ ફરીથી સેટ કરો",
+  "notifications_reset": "સૂચનાઓ પુનઃસેટ",
   "privacyAndDate": "ગોપનીયતા અને તારીખ",
-  "securityAndLogins": "સિક્યુરિટી અને લોગિન",
+  "securityAndLogins": "સુરક્ષા અને લૉગિન",
   "actions": "ક્રિયાઓ",
-  "addAccount": "એકાઉન્ટ ઉમેરો",
-  "logOut": "લોગઆઉટ",
+  "addAccount": "ખાતું ઉમેરો",
+  "logOut": "લૉગ આઉટ",
   "theme_change": "થીમ બદલો",
   "language_change": "ભાષા બદલો",
-  "back": "પાછળ",
-  "account_information": "એકાઉન્ટ માહિતી",
-  "reset_notifications_label": "સૂચનાઓ ફરીથી સેટ કરો",
+  "back": "પાછા",
+  "account_information": "ખાતાની માહિતી",
+  "reset_notifications_label": "સૂચનાઓ પુનઃસેટ કરો",
   "terms_and_conditions": "શરતો અને નિયમો",
   "term_and_condition": "શરત અને નિયમ",
-  "logout": "લોગઆઉટ",
-  "logout_confirmation": "શું તમે ખાતરીપૂર્વક લોગઆઉટ કરવા માંગો છો?",
-  "logout_message": "તમે સફળતાપૂર્વક લોગઆઉટ કર્યા.",
+  "logout": "લૉગઆઉટ",
+  "logout_confirmation": "શું તમે ખરેખર લૉગઆઉટ કરવા માંગો છો?",
+  "logout_message": "લૉગઆઉટ કરવા માટે પુષ્ટિ દબાવો",
   "light": "લાઇટ મોડમાં બદલો",
   "dark": "ડાર્ક મોડમાં બદલો",
   "web": "વેબ",
   "notification_clean": "સૂચનાઓ સાફ કરો",
   "cancel": "રદ કરો",
-  "create_account": "એકાઉન્ટ બનાવો",
-  "signup_description": "તમારા ઇમેલ સરનામા સાથે સાઇન અપ કરો.",
-  "email_placeholder": "તમારું ઇમેલ સરનામું દાખલ કરો",
+  "create_account": "ખાતું બનાવો",
+  "signup_description": "તમારા ઈમેઈલ સરનામા સાથે સાઇન અપ કરો.",
+  "email_placeholder": "તમારું ઈમેઈલ દાખલ કરો",
   "password_placeholder": "તમારો પાસવર્ડ દાખલ કરો",
   "register_button": "સાઇન અપ",
-  "register_success": "સફળતાપૂર્વક નોંધણી",
-  "have_account": "પહેલાથી એકાઉન્ટ છે? લોગિન કરો",
-  "registration_failed": "નોંધણી નિષ્ફળ રહી. કૃપા કરીને ફરી પ્રયાસ કરો.",
-  "register_failed": "નોંધણી નિષ્ફળ રહી. કૃપા કરીને ફરી પ્રયાસ કરો.",
-  "confirm_password_placeholder": "તમારું પુષ્ટિ પાસવર્ડ દાખલ કરો",
-  "password_required_length": "પાસવર્ડ ઓછામાં ઓછા 6 અક્ષરોનો હોવો જોઈએ",
-  "password_mismatch": "પાસવર્ડ સરખા હોવા જોઈએ",
-  "login_success": "સફળતાપૂર્વક લોગિન",
+  "register_success": "સફળ નોંધણી",
+  "have_account": "પહેલેથી એકાઉન્ટ છે? લૉગિન કરો",
+  "registration_failed": "નોંધણી નિષ્ફળ. કૃપા કરીને ફરી પ્રયાસ કરો.",
+  "register_failed": "નોંધણી નિષ્ફળ. કૃપા કરીને ફરી પ્રયાસ કરો.",
+  "confirm_password_placeholder": "તમારો પાસવર્ડ પુષ્ટિ કરો",
+  "password_required_length": "પાસવર્ડ ઓછામાં ઓછા 6 અક્ષરનો હોવો જોઈએ",
+  "password_mismatch": "પાસવર્ડ મૅચ થવો જોઈએ",
+  "login_success": "લૉગિન સફળ",
   "customer": "ગ્રાહક",
-  "supplier": "પુરવઠાકાર",
+  "supplier": "સપ્લાયર",
   "dark_mode": "ડાર્ક મોડ ચાલુ કરો",
   "light_mode": "લાઇટ મોડ ચાલુ કરો",
-  "reset_password": "પાસવર્ડ રીસેટ કરો",
-  "reset_description": "તમારા પાસવર્ડ રીસેટ માટે તમારું ઇમેલ દાખલ કરો.",
+  "reset_password": "પાસવર્ડ ફરી સેટ કરો",
+  "reset_description": "તમારો પાસવર્ડ ફરી સેટ કરવા તમારું ઈમેઈલ દાખલ કરો.",
   "send_reset_link": "રીસેટ લિંક મોકલો",
-  "email_required": "કૃપા કરીને તમારું ઇમેલ દાખલ કરો.",
-  "reset_email_sent": "પાસવર્ડ રીસેટ ઇમેલ સફળતાપૂર્વક મોકલવામાં આવી!",
-  "reset_failed": "પાસવર્ડ રીસેટ ઇમેલ મોકલવામાં નિષ્ફળ.",
+  "email_required": "કૃપા કરીને તમારું ઈમેઈલ દાખલ કરો.",
+  "reset_email_sent": "પાસવર્ડ રીસેટ ઈમેઈલ સફળતાપૂર્વક મોકલવામાં આવ્યો!",
+  "reset_failed": "પાસવર્ડ રીસેટ ઈમેઈલ મોકલવામાં નિષ્ફળ.",
   "go_back": "પાછા જાઓ",
-  "forget_password": "પાસવર્ડ ભૂલી ગયા છો?",
+  "forget_password": "પાસવર્ડ ભૂલાયા?",
   "change_password": "પાસવર્ડ બદલો",
-  "current_password_placeholder": "તમારો હાલનો પાસવર્ડ દાખલ કરો",
+  "current_password_placeholder": "તમારો વર્તમાન પાસવર્ડ દાખલ કરો",
   "new_password_placeholder": "તમારો નવો પાસવર્ડ દાખલ કરો",
-  "password_updated": "પાસવર્ડ સફળતાપૂર્વક અપડેટ થયો!"
+  "password_updated": "પાસવર્ડ સફળતાપૂર્વક અપડેટ થયો!",
+  "send": "મોકલો",
+  "receive": "પ્રાપ્ત કરો",
+  "add_customer": "ગ્રાહક ઉમેરો",
+  "add_supplier": "સપ્લાયર ઉમેરો",
+  "call": "કૉલ",
+  "message": "સંદેશ",
+  "accessibility": "સુલભતા",
+  "language": "ભાષા",
+  "increase_text_size": "લખાણનું માપ વધારવું",
+  "increase_text_size_A": "લખાણનું માપ વધારવું",
+  "currentTextSize": "લખાણ માપ",
+  "use_device_language": "ડિવાઇસની ભાષા ઉપયોગ કરો",
+  "auto_dark_mode": "આપમેળે ડાર્ક મોડ",
+  "follow_os_setting": "OS સેટિંગ અનુસરો",
+  "about": "વિશેષ",
+  "terms_conditions": "શરતો અને નિયમો",
+  "mode": "આપમેળે ડાર્ક મોડ",
+  "off": "બંધ",
+  "follow_on_setting": "OS સેટિંગ અનુસરો",
+  "auto_dark_mode_on": "આપમેળે ડાર્ક મોડ ચાલુ",
+  "overrideSettingsTitle": "ઉપકરણ સેટિંગ્સ ઓવરરાઇડ કરો",
+  "overrideSettingsSubtitle": "એપમાં લખાણનું માપ ગોઠવો બાકી ઉપકરણને અસર કર્યા વગર",
+  "textLabel": "A",
+  "increaseText": "વધારો",
+  "decreaseText": "ઓછું કરો",
+  "text_size_not_default": "સિસ્ટમ ડિફૉલ્ટ લખાણ માપ ચાલુ છે",
+  "please_fill_all_fields": "કૃપા કરીને બધી વિગતો ભરો",
+  "customer_updated_successfully": "ગ્રાહક સફળતાપૂર્વક અપડેટ થયો",
+  "customer_added_successfully": "ગ્રાહક સફળતાપૂર્વક ઉમેરાયો",
+  "something_went_wrong": "કંઈક ખોટું થયું",
+  "edit_customer": "ગ્રાહક સંપાદિત કરો",
+  "enter_customer_name": "ગ્રાહકનું નામ દાખલ કરો",
+  "enter_customer_email": "ગ્રાહકનો ઈમેઈલ દાખલ કરો",
+  "enter_customer_phone": "ગ્રાહકનો ફોન નંબર દાખલ કરો",
+  "enter_customer_address": "ગ્રાહકનો સરનામું દાખલ કરો",
+  "loading": "લોડ થઈ રહ્યું છે...",
+  "update_customer": "ગ્રાહક અપડેટ કરો",
+  "transcation_screen": "લેન-દેન",
+  "transcation_list": "લેન-દેન યાદી",
+  "change_transcation_detail": "લેન-દેન વિગતો બદલો",
+  "change_customer_detail": "ગ્રાહક વિગતો બદલો",
+  "business": "વ્યવસાય",
+  "edit_profile": "પ્રોફાઇલ સંપાદિત કરો",
+  "enter_amount": "રકમ દાખલ કરો",
+  "edit": "સંપાદિત કરો",
+  "save": "સાચવો",
+  "you_gave": "તમે આપ્યું",
+  "you_got": "તમે મેળવ્યું",
+  "settement": "સેટલમેન્ટ રકમ",
+  "report": "રિપોર્ટ",
+  "sms": "SMS",
+  "amt": "રકમ",
+  "bal": "બેલેન્સ",
+  "customer_name": "ગ્રાહકનું નામ",
+  "customer_email": "ગ્રાહક ઈમેઈલ (વૈકલ્પિક)",
+  "customer_phone": "ગ્રાહક ફોન",
+  "customer_address": "ગ્રાહક સરનામું (વૈકલ્પિક)",
+  "please_fill_name_phone": "કૃપા કરીને નામ અને ફોન નંબર ભરો"
 }
