--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -50,11 +50,11 @@
   "register_button": "Sign Up",
   "forgot_password": "Forgot Password",
   "forgot_password_description": "Enter your email address to reset your password.",
-  "address":"Address",
-  "phoneNumber":"Phone No",
-  "password":"Password",
-  "email":"Enter",
-  "name":"Name",
+  "address": "Address",
+  "phoneNumber": "Phone No",
+  "password": "Password",
+  "email": "Enter",
+  "name": "Name",
   "register_success": "Register Success",
   "have_account": "Already have an account? Log in",
   "registration_failed": "Registration failed. Please try again.",
@@ -136,28 +136,38 @@
   "customer_email": "Customer Email (optional)",
   "customer_phone": "Customer Phone",
   "customer_address": "Customer Address (optional)",
-  "please_fill_name_phone":"Please Fill Name and Phone Number",
-  "debit":"Debit",
-  "credit":"Credit",
-  "data_added":"Data Added successfully",
-  "phone_exist":"Phone number already exists!",
-  "user_exist":"User already Exists",
-  "no_transactions_found":"No transactions found",
-  "no_data_found":"No data Found",
+  "please_fill_name_phone": "Please Fill Name and Phone Number",
+  "debit": "Debit",
+  "credit": "Credit",
+  "data_added": "Data Added successfully",
+  "phone_exist": "Phone number already exists!",
+  "user_exist": "User already Exists",
+  "no_transactions_found": "No transactions found",
+  "no_data_found": "No data Found",
   "phone_number": "Phone Number",
   "payment_received": "Payment Received",
   "payment_sent": "Payment Sent",
   "total_given": "Total Given",
   "total_received": "Total Received",
-  "you_send":"You Send",
+  "you_send": "You Send",
   "transaction_history": "Transaction History",
   "add_transaction": "Add Transaction",
   "delete": "Delete",
-  "transactions":"Transactions",
+  "transactions": "Transactions",
   "confirm_delete": "Are you sure you want to delete this transaction?",
   "total_settlement": "Total Settlement",
   "no_data": "No Data Available",
   "failed_to_open_sms": "Failed to open SMS app.",
-  "enter_business_name":"Enter Business Name ",
-  "data_updated":"Data Updated"
+  "enter_business_name": "Enter Business Name ",
+  "data_updated": "Data Updated",
+  "supplier_phone": "Supplier Phone Number",
+  "enter_supplier_phone": "Enter Supplier Phone Number",
+  "supplier_name": "Supplier Name",
+  "enter_supplier_name": "Enter Supplier Name",
+  "supplier_email": "Supplier Email",
+  "enter_supplier_email": "Enter Supplier Email",
+  "supplier_address": "Supplier Address",
+  "enter_supplier_address": "Enter Supplier Address",
+  "show_address":"Show Address",
+  "close":"Close"
 }
